--- a/css/_header.css
+++ b/css/_header.css
@@ -1,4 +1,4 @@
-/* // font-family: 'Roboto', sans-serif; */
+/* font-family: 'Lato', sans-serif; */
 
 * {
     margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Roboto', arial, sans-serif;
+    font-family: 'Raleway', arial, sans-serif;
 }
 
 .first {
@@ -67,7 +67,7 @@ body {
 
 .animation .person h1 {
     font-size: 2rem;
-    font-weight: 800;
+    font-weight: 900;
     background: linear-gradient(to right, #190099 50%, #2381FA);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -75,11 +75,12 @@ body {
 }
 
 .animation .person h2 {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: 200;
     text-align: right;
-    padding-left: 15px;
+    padding-left: 50px;
     animation: bounce1 1.5s;
+    text-transform: lowercase;
 }
 
 .animation i {
